# SPDX-FileCopyrightText: 2026 OpenBasil Contributors
#
# SPDX-License-Identifier: Apache-2.0

[workspace]

[package]
name = "basil-artifact-signing"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "artifact-signing"
path = "src/main.rs"

[dependencies]
basil = { path = "../../crates/basil-client" }

anyhow = "1"
ed25519-dalek = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.14.6"
