# SPDX-FileCopyrightText: 2026 OpenBasil Contributors
#
# SPDX-License-Identifier: Apache-2.0

[workspace]

[package]
name = "basil-cose-nats-demo"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "cose-nats-demo"
path = "src/main.rs"

[dependencies]
basil = { path = "../../crates/basil-client", package = "basil-client" }
basil-cose = { path = "../../crates/basil-cose" }
basil-proto = { path = "../../crates/basil-proto" }

anyhow = "1"
async-nats = { version = "0.49", default-features = false, features = ["ring"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = "1"
