# SPDX-FileCopyrightText: 2026 OpenBasil Contributors
#
# SPDX-License-Identifier: Apache-2.0

[workspace]

[package]
name = "basil-cose-nats-telemetry"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["info@openbasil.org"]
repository = "https://github.com/openbasil/basil"
homepage = "https://github.com/openbasil/basil"
publish = false

[[bin]]
name = "cose-nats-telemetry"
path = "src/main.rs"

[dependencies]
basil = { path = "../../crates/basil-client" }
basil-cose = { path = "../../crates/basil-cose" }
basil-nats = { path = "../../crates/basil-nats" }

anyhow = "1"
async-nats = { version = "0.49", default-features = false, features = ["ring", "nkeys"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
