[workspace]

[package]
name = "basil-stream-file-encryption"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "stream-file-encryption"
path = "src/main.rs"

[dependencies]
basil = { path = "../../crates/basil-client" }

anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
