# SPDX-FileCopyrightText: 2026 OpenBasil Contributors
#
# SPDX-License-Identifier: Apache-2.0

[workspace]

[package]
name = "basil-web-service-axum"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["info@openbasil.org"]
repository = "https://github.com/openbasil/basil"
homepage = "https://github.com/openbasil/basil"
publish = false

[[bin]]
name = "web-service-axum"
path = "src/main.rs"

[dependencies]
axum = "0.8"
basil = { path = "../../crates/basil-client" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
